--- a/HDRNeuralNetwork.DataSource.Test/HDRNeuralNetwork.DataSource.Test.csproj
+++ b/HDRNeuralNetwork.DataSource.Test/HDRNeuralNetwork.DataSource.Test.csproj
@@ -35,7 +35,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq, Version=4.7.145.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.7.145\lib\net45\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -52,7 +61,7 @@
   <ItemGroup>
     <Compile Include="ImageMnistReaderTest.cs" />
     <Compile Include="LabelMnistReaderTest.cs" />
-    <Compile Include="MnistDataProviderTest.cs" />
+    <Compile Include="DataProviderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +73,7 @@
   <ItemGroup>
     <None Include="Mnist\t10k-images.idx3-ubyte" />
     <None Include="Mnist\t10k-labels.idx1-ubyte" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
