--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ HDRNeuralNetwork.DataSource/bin
 HDRNeuralNetwork.DataSource/obj
 HDRNeuralNetwork.DataSource.Test/bin
 HDRNeuralNetwork.DataSource.Test/obj
+HDRNeuralNetwork.WinApp/bin
+HDRNeuralNetwork.WinApp/obj
 *.user
 packages
 TestResults
