--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 .vs
-HDRNeuralNetwork.DataSource/bin
-HDRNeuralNetwork.DataSource/obj
-HDRNeuralNetwork.DataSource.Test/bin
-HDRNeuralNetwork.DataSource.Test/obj
-HDRNeuralNetwork.WinApp/bin
-HDRNeuralNetwork.WinApp/obj
+*/bin
+*/obj
 *.user
 packages
 TestResults
