--- a/HDRNeuralNetwork.WinApp/HDRNeuralNetwork.WinApp.csproj
+++ b/HDRNeuralNetwork.WinApp/HDRNeuralNetwork.WinApp.csproj
@@ -63,7 +63,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Converters\ByteArrayToImageSourceConverter.cs" />
     <Compile Include="Interfaces\IMainWindowModelFactory.cs" />
     <Compile Include="Interfaces\IWindow.cs" />
     <Compile Include="PoorMansDIContainer.cs" />
@@ -71,6 +70,7 @@
     <Compile Include="Utils\MainWindowModelFactory.cs" />
     <Compile Include="Utils\WindowAdapter.cs" />
     <Compile Include="ViewModels\MainWindowModel.cs" />
+    <Compile Include="ViewModels\PatternViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
